fix: make selection more visible. fixes #12

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -31,11 +31,11 @@
 }
 
 .pano-item:selected {
-  box-shadow: 0px 0px 5px 0px rgba(100, 175, 255, 1) !important;
+  box-shadow: none !important;
 }
 
 .pano-item:hover {
-  box-shadow: 0px 0px 5px 0px rgba(100, 175, 255, 0.6);
+  box-shadow: 0px 0px 5px 2px #89b4fa;
 }
 
 .pano-item-header {
